TestCases/Errors/threaded_movement/observations/sum_09_obs.spm
 obs   8-18   0.00555555555555556 
 obs   9-18   0.00389278752436647 
 error_value   8-18   0 
 error_value   9-18   0 
